Agregando la documentacion de la relacion POST - COMMENTARIO
